Added background image and worked on landing page styling

--- a/BlowOut/Views/Home/Index.cshtml
+++ b/BlowOut/Views/Home/Index.cshtml
@@ -2,30 +2,59 @@
     ViewBag.Title = "Blow Out!";
 }
 
-<div class="jumbotron">
-    <h1>Welcome to Blow Out!</h1>
-    <p class="lead">We blow our competitors out of the water</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="~/Content/Main.css" />
+</head>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+<body background="~/Content/Images/Instruments.png">
+    <div class="jumbotron" style="text-align:center">
+        <h1>Welcome to Blow Out!</h1>
+        <p>We blow our competitors out of the water</p>
+        <p class="lead">
+            We will make your rental experience fun and easy.<br />
+            You can rent both new and used instruments.<br />
+            Click the link below to start renting today!
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a href="https://asp.net" class="btn btn-primary btn-lg">Rent Instruments Now &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+
+    <br />
+    <div class="row">
+        <div class="col-md-12">
+            <p class="lead">
+                "It's easy to play any musical instrument:
+                all you have to do is touch the right key at the right time and the instrument will play itself”.<br />
+                - Johann Sebastian Bach
+            </p>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+
+    <div class="row">
+        <div class="col-md-1" style="text-align:center">
+        </div>
+        <div class="col-md-3" style="text-align:center">
+            <h2>Getting started</h2>
+            <p>
+                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
+                enables a clean separation of concerns and gives you full control over markup
+                for enjoyable, agile development.
+            </p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        </div>
+        <div class="col-md-3" style="text-align:center">
+            <h2>Getting started</h2>
+            <p>
+                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
+                enables a clean separation of concerns and gives you full control over markup
+                for enjoyable, agile development.
+            </p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        </div>
+        <div class="col-md-3" style="text-align:center">
+            <h2>Get more libraries</h2>
+            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        </div>
     </div>
-</div>
+</body>
