--- a/BlowOut/Content/Main.css
+++ b/BlowOut/Content/Main.css
@@ -1,5 +1,24 @@
-﻿body {
+﻿.body-landing {
     background-image: url(../Images/Instruments.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.white-bg {
+    background: #eee !important;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.blue-button {
+    background: #3e50a4;
+    color: white;
+    border-width: 1px;
+    border-color: black;
+}
+
+.body-contact {
+    background-image: url(../Images/Contact.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
