--- a/BlowOut/Views/Shared/_Layout.cshtml
+++ b/BlowOut/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Rentals", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Rentals", "Rentals", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
