--- a/BlowOut/Views/Home/Contact.cshtml
+++ b/BlowOut/Views/Home/Contact.cshtml
@@ -2,6 +2,11 @@
     ViewBag.Title = "Contact";
 }
 
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="~/Content/Main.css" />
+</head>
+
 <body class="body-contact">
     <div class="jumbotron" style="text-align:center">
         <h1>Contact Us</h1>
@@ -41,22 +46,4 @@
             </p>
         </div>
     </div>
-</body-content>
-
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="~/Content/Main.css" />
-</head>
-
-<h2></h2>
-<h3></h3>
-<h3></h3>
-<h3></h3>
-
-<address>
-
-</address>
-
-<address>
-    
-</address>
+</body>
