--- a/BlowOut/Views/Home/Index.cshtml
+++ b/BlowOut/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
             You can rent both new and used instruments.<br />
             Click the link below to start renting today!
         </p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-lg blue-button">Rent Instruments Now &raquo;</a></p>
+        <p><a href="~/Home/Rentals" class="btn btn-primary btn-lg blue-button">Rent Instruments Now &raquo;</a></p>
     </div>
 
     <br />
@@ -39,7 +39,7 @@
                 Whether you are renting for the long-term or just a short period, we commit to giving you the best service anywhere. 
                 We guarantee you will love the quality of instruments we provide.
             </p>
-            <p><a class="btn btn-default blue-button" href="https://go.microsoft.com/fwlink/?LinkId=301865">Rent today &raquo;</a></p>
+            <p><a class="btn btn-default blue-button" href="~/Home/Rentals">Rent today &raquo;</a></p>
         </div>
         <!-- Link to About -->
         <div class="col-md-4 bg-light text-dark" style="text-align:center">
@@ -47,9 +47,8 @@
             <p class="white-bg">
                 We have been in the rental business since early 2007.
                 Our core beliefs are providing quality rentals, treating customers like family, and bringing joy to others through music.
-
             </p>
-            <p><a class="btn btn-default blue-button" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+            <p><a class="btn btn-default blue-button" href="~/Home/About">Learn more &raquo;</a></p>
         </div>
         <!-- Link to Contact -->
         <div class="col-md-4 bg-light text-dark" style="text-align:center">
