--- a/BlowOut/Views/Home/Rentals.cshtml
+++ b/BlowOut/Views/Home/Rentals.cshtml
@@ -9,11 +9,9 @@
 
 <body class="body-rentals">
     <div class="jumbotron" style="text-align:center">
-        <h1>Contact Us</h1>
+        <h1>Rentals</h1>
         <p class="lead">
-            @ViewBag.Message<br />
-            @ViewBag.VoiceMail<br />
-            @ViewBag.Email
+            @ViewBag.Rentals
         </p>
         <p><a href="~/Home/Index" class="btn btn-primary btn-lg blue-button">Return Home &raquo;</a></p>
     </div>
@@ -22,34 +20,34 @@
         <!-- Trumpet-->
         <div class="col-md-4 bg-light text-dark" style="text-align:center">
             <h2 class="white-bg">Trumpet</h2>
-            <p><a class="btn btn-default blue-button" href="">See our rates &raquo;</a></p>
+            <p><a class="btn btn-default blue-button" href="~/Home/Trumpet">See our rates &raquo;</a></p>
         </div>
         <!-- Trombone-->
         <div class="col-md-4 bg-light text-dark" style="text-align:center">
             <h2 class="white-bg">Trombone</h2>
-            <p><a class="btn btn-default blue-button" href="">See our rates &raquo;</a></p>
+            <p><a class="btn btn-default blue-button" href="~/Home/Trombone">See our rates &raquo;</a></p>
         </div>
         <!-- Tuba-->
         <div class="col-md-4 bg-light text-dark" style="text-align:center">
             <h2 class="white-bg">Tuba</h2>
-            <p><a class="btn btn-default blue-button" href="">See our rates &raquo;</a></p>
+            <p><a class="btn btn-default blue-button" href="~/Home/Tuba">See our rates &raquo;</a></p>
         </div>
     </div>
     <div class="row">
         <!-- Flute-->
         <div class="col-md-4 bg-light text-dark" style="text-align:center">
             <h2 class="white-bg">Flute</h2>
-            <p><a class="btn btn-default blue-button" href="">See our rates &raquo;</a></p>
+            <p><a class="btn btn-default blue-button" href="~/Home/Flute">See our rates &raquo;</a></p>
         </div>
         <!-- Clarinet-->
         <div class="col-md-4 bg-light text-dark" style="text-align:center">
             <h2 class="white-bg">Clarinet</h2>
-            <p><a class="btn btn-default blue-button" href="">See our rates &raquo;</a></p>
+            <p><a class="btn btn-default blue-button" href="~/Home/Clarinet">See our rates &raquo;</a></p>
         </div>
         <!-- Saxophone-->
         <div class="col-md-4 bg-light text-dark" style="text-align:center">
             <h2 class="white-bg">Saxophone</h2>
-            <p><a class="btn btn-default blue-button" href="">See our rates &raquo;</a></p>
+            <p><a class="btn btn-default blue-button" href="~/Home/Saxophone">See our rates &raquo;</a></p>
         </div>
     </div>
 </body>
