--- a/BlowOut/Views/Home/Rentals.cshtml
+++ b/BlowOut/Views/Home/Rentals.cshtml
@@ -16,37 +16,38 @@
         <p><a href="~/Home/Index" class="btn btn-primary btn-lg blue-button">Return Home &raquo;</a></p>
     </div>
 
-    <div class="row">
+    <div class="row white-bg">
         <!-- Trumpet-->
         <div class="col-md-4 bg-light text-dark" style="text-align:center">
-            <h2 class="white-bg">Trumpet</h2>
+            <h2>Trumpet</h2>
             <p><a class="btn btn-default blue-button" href="~/Home/Trumpet">See our rates &raquo;</a></p>
         </div>
         <!-- Trombone-->
         <div class="col-md-4 bg-light text-dark" style="text-align:center">
-            <h2 class="white-bg">Trombone</h2>
+            <h2>Trombone</h2>
             <p><a class="btn btn-default blue-button" href="~/Home/Trombone">See our rates &raquo;</a></p>
         </div>
         <!-- Tuba-->
         <div class="col-md-4 bg-light text-dark" style="text-align:center">
-            <h2 class="white-bg">Tuba</h2>
+            <h2>Tuba</h2>
             <p><a class="btn btn-default blue-button" href="~/Home/Tuba">See our rates &raquo;</a></p>
         </div>
     </div>
-    <div class="row">
+    <br />
+    <div class="row white-bg">
         <!-- Flute-->
         <div class="col-md-4 bg-light text-dark" style="text-align:center">
-            <h2 class="white-bg">Flute</h2>
+            <h2>Flute</h2>
             <p><a class="btn btn-default blue-button" href="~/Home/Flute">See our rates &raquo;</a></p>
         </div>
         <!-- Clarinet-->
         <div class="col-md-4 bg-light text-dark" style="text-align:center">
-            <h2 class="white-bg">Clarinet</h2>
+            <h2>Clarinet</h2>
             <p><a class="btn btn-default blue-button" href="~/Home/Clarinet">See our rates &raquo;</a></p>
         </div>
         <!-- Saxophone-->
         <div class="col-md-4 bg-light text-dark" style="text-align:center">
-            <h2 class="white-bg">Saxophone</h2>
+            <h2>Saxophone</h2>
             <p><a class="btn btn-default blue-button" href="~/Home/Saxophone">See our rates &raquo;</a></p>
         </div>
     </div>
